--- a/LECTURE9.html
+++ b/LECTURE9.html
@@ -491,7 +491,7 @@ div.tocify {
 <p>The simple fact is: <em>it’s much more likely for all 10 individuals in a population to be <strong>unlucky</strong> in a given year than for all 1000 individuals in a population to be <strong>unlucky</strong> in a given year!!</em> – just as it is very unlikely for all coin flips out of 1000 to come up heads…</p>
 <p>This illustrates the very important concept, that small populations can go extinct due to demographic stochasticity alone, whereas this possibility is vanishingly small for large populations.</p>
 <p>The moral of the story for demographic stochasticity was: weird and dramatic things (e.g., extinction) can happen in small populations!</p>
-<p>Weird and dramatic things like random extinction just would <strong>never happen</strong> in large populations just due to random chance (in a stable, favorable environment)!</p>
+<p>Weird and dramatic things like random extinction just would <strong>never happen</strong> in large populations just due to random chance (assuming a stable, favorable environment)!</p>
 <p>Same goes for <em>genetic drift</em>! Genetic drift is a <em>small-population phenomenon</em>!</p>
 </div>
 <div id="genetic-drift" class="section level3">
@@ -511,7 +511,7 @@ div.tocify {
 <p><img src="inbreeding1.jpg" /></p>
 <p>Inbreeding depression is another problem peculiar to small populations.</p>
 <p>Most diploid populations have some bad gene variants (alleles) in their gene pool. These are often called <strong>deleterious alleles</strong>. These deleterious alleles usually don’t cause problems becuase in general they are <strong>recessive</strong> - that is, the bad effect is only apparent if an individual has <em>two copies of that allele</em>! And since these alleles are rare, it is extremely unlikely that you get two copies of the same bad allele!</p>
-<p>Unless…your two parents are close relatives, and both inherited the same allele from a common ancestor!</p>
+<p>Unless…your two parents are close relatives, and both inherited the same gene variant from a common ancestor!</p>
 <p><strong>Q</strong>: Why is it more likely for your two parents to be close relatives if you are living in a small population?</p>
 <p><img src="inbreeding2.jpg" /></p>
 <p>The above image is of <a href="https://en.wikipedia.org/wiki/Charles_II_of_Spain">Charles II of Spain</a>, who tragically illustrates some of the issues that can emerge with severe inbreeding.</p>
@@ -528,9 +528,9 @@ div.tocify {
 <p>When we talked about <a href="LECTURE5.html">Allee effects</a>, we saw a case in which a deterministic population model could have a minimum viable population size- below a certain critical threshold, the population was doomed to extinction, and above the threshold the population would deterministically increase until carrying capacity.</p>
 <p>However, the MVP concept derived from <em>conservation biology</em> and not from theoretical population biology. Conservation biology deals with real-world systems which are messy, variable and uncertain. Therefore, the MVP concept is usually quantified using stochastic population models.</p>
 <p>The most satisfying general definition of MVP (in my opinion) directly relates to the extinction vortex concept: Minimum Viable Population size (MVP) is that <em>population size above which the extinction vortex can be safely averted</em>.</p>
-<p>However, the above definition is not strictly quantifiable. Also MVP is often defined in relation to population models, many of which don’t have an explicit genetic component (becuase we often don’t know exactly how many deleterious recessive alleles are in a population!). The quantitative, operational definition that we will use in this course is:</p>
+<p>However, the above definition is not strictly quantifiable for most species. Also MVP is often defined in relation to population models, many of which don’t have an explicit genetic component (becuase we often don’t know exactly how many deleterious recessive alleles are in a population!). The quantitative, operational definition that we will use in this course is:</p>
 <blockquote>
-<p><em>MVP: the initial abundance threshold below which the risk of extinction over a specified time period (e.g., 50 years) exceeds a specified threshold (e.g., 10%)</em></p>
+<p><em>MVP: the smallest initial abundance that satisfied a specified extinction risk threshold (e.g., the smallest initial abundance such that the risk of extinction over 50 years is below 10%)</em></p>
 </blockquote>
 </div>
 <div id="population-viability-analysis-pva" class="section level2">
