--- a/schedule.html
+++ b/schedule.html
@@ -587,7 +587,7 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/13/2020</td>
-<td align="left">Work on group PVA projects (attendance optional)</td>
+<td align="left">Work on group PVA projects (proposal meetings)</td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
