--- a/LECTURE12.html
+++ b/LECTURE12.html
@@ -508,7 +508,15 @@ div.tocify {
 <p>For example – after running your model (step 4) and looking at your results (step 5) you might realize that the model is totally unrealistic. This might prompt you to go back and change your conceptual model of the life history (step 1), and re-parameterize your model (step 2).</p>
 <div id="step-1-life-history" class="section level4">
 <h4>Step 1: Life history</h4>
-<p>Lecture 1: systems thinking Lecture 2: feedbacks Lecture 3: exponential growth Lecture 4: density dependence Lecture 5: allee effects Lecture 6: age structured populations Lecture 7: matrix population models Lecture 8: stochasticity Labs 1,2,3,4,5</p>
+<p>Lecture 1: systems thinking<br />
+Lecture 2: feedbacks<br />
+Lecture 3: exponential growth<br />
+Lecture 4: density dependence<br />
+Lecture 5: allee effects<br />
+Lecture 6: age structured populations<br />
+Lecture 7: matrix population models<br />
+Lecture 8: stochasticity<br />
+Labs 1,2,3,4,5</p>
 <p>The first step is to conceptualize the life history for your species of interest. This is where you might put together a life history diagram, and think about the following questions:</p>
 <ul>
 <li>How many life stages should I include?</li>
@@ -523,26 +531,41 @@ div.tocify {
 </div>
 <div id="step-2-parameterize-the-demographic-model" class="section level4">
 <h4>Step 2: Parameterize the demographic model!</h4>
-<p>Lecture 3: exponential growth Lecture 4: density dependence Lecture 5: allee effect Lecture 7: matrix population models Lecture 8: stochasticity and uncertainty Labs 1,2,3,4,5,7</p>
+<p>Lecture 3: exponential growth<br />
+Lecture 4: density dependence<br />
+Lecture 5: allee effect<br />
+Lecture 7: matrix population models<br />
+Lecture 8: stochasticity and uncertainty<br />
+Labs 1,2,3,4,5,7</p>
 <p>This is where you attach real numbers to the stocks and flows in your conceptual life history diagram. Remember that these parameters are more than just survival and fecundity. It’s also:</p>
 <ul>
-<li>Annual variation in survival and fecundity (environmental stochasticity).</li>
-<li>Initial abundances</li>
-<li>Density dependence functions and parameters (including K)</li>
-<li>Allee thresholds</li>
-<li>Catastrophe effect sizes and probabilities</li>
-<li>Effects of management actions.</li>
+<li>Annual variation in survival and fecundity (environmental stochasticity)<br />
+</li>
+<li>Initial abundances<br />
+</li>
+<li>Density dependence functions and parameters (including K)<br />
+</li>
+<li>Allee thresholds<br />
+</li>
+<li>Catastrophe effect sizes and probabilities<br />
+</li>
+<li>Effects of management actions<br />
+</li>
 <li>And more…</li>
 </ul>
 <p>[stone soup analogy to model parameterization!]</p>
 </div>
 <div id="step-3-spatial-structure" class="section level4">
 <h4>Step 3: Spatial structure!</h4>
-<p>Lecture 13: metapopulation models Lecture 14: source-sink dynamics Lab 6: metapopulation models</p>
+<p>Lecture 13: metapopulation models<br />
+Lecture 14: source-sink dynamics<br />
+Lab 6: metapopulation models</p>
 <p>If you want to ask spatial questions, your model needs to be spatially explicit, or at least consider spatial structure in some way. The kinds of questions you might think about include:</p>
 <ul>
-<li>How many discrete populations are there in your metapopulation?</li>
-<li>Do different populations have different mean vital rates? Are some populations likely to be sources and others likely to be sinks?</li>
+<li>How many discrete populations are there in your metapopulation?<br />
+</li>
+<li>Do different populations have different mean vital rates? Are some populations likely to be sources and others likely to be sinks?<br />
+</li>
 <li>Is environmental stochasticity <strong>spatially correlated</strong>? (is a bad year in one subpopulation likely to be a bad year in every subpopulation?)</li>
 <li>At what rate do individuals move among these populations?</li>
 <li>Can connectivity be enhanced via management?</li>
