--- a/PVA1_421.html
+++ b/PVA1_421.html
@@ -489,7 +489,7 @@ div.tocify {
 
 <div id="population-viability-analysis-pva" class="section level2">
 <h2>Population Viability Analysis (PVA)</h2>
-<p>For the next three class periods, we will explore the use of <strong>population models</strong> to address conservation questions– a process often called <strong>population viability analysis (PVA)</strong></p>
+<p>In this short course, we will explore the use of <strong>population models</strong> to address conservation questions– a process often called <strong>population viability analysis (PVA)</strong></p>
 <p>PVA is a set of practical approaches to problem-solving in conservation, and wildlife management via creative application of <em>demographic theory</em>, <em>simulation models</em> and <em>statistics</em>.</p>
 <p>As much as possible we will use hands-on activities to explore the fundamentals of PVA. We will use <a href="https://insightmaker.com/">InsightMaker- a free web-based systems modeling tool</a> for running simulation models.</p>
 <p>First we will run through the basics of population modeling for wildlife conservation…</p>
@@ -528,7 +528,7 @@ div.tocify {
 <h3><em>InsightMaker</em>: a simulation modeling framework for dynamic systems!</h3>
 <p><a href="insightmaker.com">InsightMaker</a> is a web-based visual programming language for modeling the dynamics of inter-connected systems.</p>
 <p>Any <strong>dynamic system</strong> (like a wildlife population) essentially consists of [Stocks] and [Flows].</p>
-<p>A [Stock] simply represents a quantity of something. The [Stock] only changes over time ONLY via [Flows In] or [Flows Out].</p>
+<p>A [Stock] simply represents a quantity of something. The [Stock] changes over time ONLY via [Flows In] or [Flows Out].</p>
 <p>A [Stock] of stuff increases over time via what [Flows] in. Imagine our stock represents <em>Moose</em>!</p>
 <p><em>Moose Births</em> would then be the input [Flow] to the population of <em>Moose</em> over time.</p>
 <p>A [Stock] of stuff decreases over time via what [Flows] out. For example, <em>Moose Deaths</em> could represent the [Flow] out of the population of <em>Moose</em>.</p>
@@ -536,7 +536,7 @@ div.tocify {
 <p>If the [Flow] in is larger than the [Flow] out then the [Stock] increases over time.</p>
 <p>If the [Flow] out is larger than the [Flow] in then the [Stock] decreases over time.</p>
 <p>If the [Flow] in equals the [Flow] out then the amount in the [Stock] will not change over time. In this case, the system is in <strong>equilibrium</strong>.</p>
-<p>[Please watch the “Intro to InsightMaker” video before moving on to the hands-on activities!]</p>
+<p>[Please make sure you watch the “Intro to InsightMaker” video before moving on to the hands-on activities!]</p>
 </div>
 </div>
 <div id="in-class-activity-a-basic-simulation-model" class="section level2">
