--- a/PVA1_421.html
+++ b/PVA1_421.html
@@ -511,7 +511,7 @@ div.tocify {
 <h2>How do populations change over time?</h2>
 <div id="exponential-growth-the-fundamental-principle-of-population-ecology" class="section level3">
 <h3>Exponential growth: the fundamental principle of population ecology</h3>
-<p>Populations of living things have the ability to grow exponentially. This is the “power of life”.</p>
+<p>Populations of living things have the ability to grow <em>exponentially</em>. This is the “power of life”.</p>
 <p><img src="puffball1.png" /></p>
 <p>Giant puffballs produce 7 trillion offspring (spores) in one reproductive event.</p>
 <p>… If all of those individuals reached adulthood, the descendants from just <em>two parent puffballs</em> would weigh more than the entire planet in two generations!</p>
