--- a/PVA1_421.html
+++ b/PVA1_421.html
@@ -512,7 +512,7 @@ div.tocify {
 <div id="exponential-growth-the-fundamental-principle-of-population-ecology" class="section level3">
 <h3>Exponential growth: the fundamental principle of population ecology</h3>
 <p>Populations of living things have the ability to grow <em>exponentially</em>. This is the “power of life”.</p>
-<p><img src="puffball1.png" /></p>
+<p><img src="Puffball002.jpg" /></p>
 <p>Giant puffballs produce 7 trillion offspring (spores) in one reproductive event.</p>
 <p>… If all of those individuals reached adulthood, the descendants from just <em>two parent puffballs</em> would weigh more than the entire planet in two generations!</p>
 <p>The reason? Populations grow in a positive feedback process. More individuals means greater potential for population growth (e.g., more total births!), which means more individuals enter the population, which means EVEN GREATER potential for population growth.</p>
