--- a/PVA2_421.html
+++ b/PVA2_421.html
@@ -521,13 +521,10 @@ div.tocify {
 <em>Subadult 2:</em> 2<br />
 <em>Subadult 3:</em> 2<br />
 <em>Adults:</em> 10</p>
-<p>Take a few minutes to parameterize the model, using the 1983 to 2001 estimates!</p>
+<p>Take a few minutes to parameterize the model, using the 1983 to 2001 estimates from the table above!</p>
 </div>
-<div id="step-3-spatial-structure-not-applicable-here" class="section level4">
-<h4>Step 3: Spatial structure (not applicable here)</h4>
-</div>
-<div id="step-4-simulate" class="section level4">
-<h4>Step 4: Simulate!</h4>
+<div id="step-3-simulate" class="section level4">
+<h4>Step 3: Simulate!</h4>
 <p>Okay, let’s run the model!</p>
 <ol style="list-style-type: decimal">
 <li>Try running the model with the parameterization we discussed above. What do you notice? Is the population growing?</li>
