--- a/PVA3_421.html
+++ b/PVA3_421.html
@@ -489,13 +489,13 @@ div.tocify {
 
 <div id="pva-for-loggerhead-turtles" class="section level1">
 <h1>PVA for loggerhead turtles!</h1>
-<p>This PVA example shows the use of demographic data in projecting a population into the future. By the time we meet on Tuesday, April 3 be sure that this model is running on your laptop (in InsightMaker) because we will be exploring the model more fully in class together, and we will use this PVA to do some management-relevant <strong>scenario testing</strong>. Also make sure you have run through the Excel exercise- see below!</p>
+<p>This PVA example, like the grizzly bear example, demonstrates the use of real demographic data in projecting a population into the future. We will use this PVA to do some management-relevant <strong>scenario testing</strong>. Also try to run through the Excel exercise (see below)!</p>
 <div id="constructing-a-demographic-matrix-model-data-for-loggerhead-turtles" class="section level2">
 <h2>Constructing a demographic (matrix) model data for loggerhead turtles</h2>
 <p>If you would like more background information on loggerhead turtles, visit these websites:</p>
-<p><a href="http://ecos.fws.gov/species_profile/servlet/gov.doi.species_profile.servlets.SpeciesProfile?spcode=C00U">USFWS site</a><br />
-<a href="http://www.nmfs.noaa.gov/prot_res/species/turtles/loggerhead.html">NMFS site</a><br />
-<a href="http://www.tpwd.state.tx.us/huntwild/wild/species/endang/animals/reptiles_amphibians/logghead.phtml">Texas site</a></p>
+<p><a href="https://ecos.fws.gov/ecp0/profile/speciesProfile?spcode=C00U">USFWS site</a><br />
+<a href="https://www.fisheries.noaa.gov/species/loggerhead-turtle">NMFS site</a><br />
+<a href="https://tpwd.texas.gov/huntwild/wild/species/logghead/">Texas site</a></p>
 <div id="background" class="section level3">
 <h3>Background</h3>
 <p><img src="loggerhead2.jpg" /></p>
@@ -526,7 +526,7 @@ Because beaches are popular sites for human recreation and development, arriving
 </ol>
 <p>Once hatchlings reach the ocean, they face different threats as they slowly develop to maturity.</p>
 <ul>
-<li>Juveniles (after the sargassum-feeding stage) feed in coastal seagrass mats which are also frequented by shrimp boats and other inshore trawling vessels. Hence <em>accidental capture (“bycatch”)</em> and subsequent drowning in the nets and traps used by these vessels is common.</li>
+<li>After the sargassum-feeding stage, loggerhead turtle juveniles, subadults and adults feed in coastal seagrass mats which are also frequented by shrimp boats and other inshore trawling vessels. Hence <em>accidental capture (“bycatch”)</em> and subsequent drowning in the nets and traps used by these vessels is common- especially for juveniles!</li>
 </ul>
 <p><img src="trawl1.png" /></p>
 <ul>
@@ -569,32 +569,18 @@ Because beaches are popular sites for human recreation and development, arriving
 <em>Transition from stage 5-1 (reproduction by adults)</em>: 61.90</p>
 <p>For this model we will assume no stochasticity or uncertainty in any of these parameters.</p>
 </div>
-<div id="step-3-spatial-structure" class="section level3">
-<h3>Step 3: spatial structure</h3>
-<p>We are not modeling spatial structure, so we can skip this one!</p>
-</div>
-<div id="step-4-simulate" class="section level3">
-<h3>Step 4: simulate!</h3>
+<div id="step-3-simulate" class="section level3">
+<h3>Step 3: simulate!</h3>
 <p>We can project the loggerhead population into the future using <em>matrix multiplication</em>!</p>
 <p>We can do this using any number of tools- including R, Excel, or Insightmaker.</p>
 <p>See the end of this lecture for a review of matrix population models and how they work.</p>
-<p>Since you probably are most familiar with Excel, let’s do it in Excel first! Or if you’d like to do it in R instead, I’ve provided some code to get you started! You can download the R code <a href="PVA3_421.R">here</a></p>
-</div>
-</div>
-<div id="population-projection-in-excel" class="section level2">
-<h2>Population projection in Excel</h2>
-<p>You can load the base Excel model <a href="Loggerhead2019.xlsx">here</a></p>
 <div id="build-the-baseline-loggerhead-projection-matrix" class="section level4">
 <h4>Build the baseline loggerhead projection matrix</h4>
 <ul>
-<li>Your initial spreadsheet should look something like this:</li>
+<li>In Excel, your projection matrix would look something like this:</li>
 </ul>
 <p><img src="loggerhead6.jpg.png" /></p>
-<ul>
-<li><p>Note that the transition rates are already provided for you in the spreadsheet – in the form of a transition matrix!</p></li>
-<li><p>NOTE: Wherever a transition is not possible, e.g., from hatchlings to large juveniles, you will see a zero in the transition matrix.</p></li>
-</ul>
-<p>In R, your projection matrix should look like this!</p>
+<p>In R, your projection matrix would look like this!</p>
 <pre class="r"><code>##### specify projection matrix!
 
 projection_matrix &lt;- matrix(
@@ -618,9 +604,98 @@ projection_matrix</code></pre>
 ## Large Juv     0.000     0.047     0.657    0.000  0.000
 ## Subadult      0.000     0.000     0.019    0.682  0.000
 ## Adult         0.000     0.000     0.000    0.061  0.809</code></pre>
+<p>But we will use InsightMaker for this PVA:</p>
 </div>
-<div id="forecast-the-population-into-the-future-in-excel" class="section level4">
-<h4>Forecast the population into the future in Excel</h4>
+</div>
+</div>
+<div id="projecting-the-loggerhead-population-in-insightmaker" class="section level2">
+<h2>Projecting the loggerhead population in InsightMaker</h2>
+<p>First, clone the baseline loggerhead PVA model <a href="https://insightmaker.com/insight/77078/Loggerhead-PVA-base-model">here</a>.</p>
+<p>Hit “Simulate”. Your results should look similar to this (which was done in R):</p>
+<pre class="r"><code># Run the matrix projection model!
+
+nYears &lt;- 100                                            # set the number of years to project
+TMat &lt;- projection_matrix                               # define the projection matrix
+Abundance_year0 &lt;- c(2000,500,300,300,20)   # vector of initial abundances
+InitAbund &lt;- Abundance_year0                            # define the initial abundance
+
+  ## NOTE: the code below can be re-used without modification:
+allYears &lt;- matrix(0,nrow=nrow(TMat),ncol=nYears+1)     # build a storage array for all abundances!
+allYears[,1] &lt;- InitAbund  # set the year 0 abundance                                    
+for(t in 2:(nYears+1)){   # loop through all years
+  allYears[,t] &lt;-  TMat %*% allYears[,t-1]
+}
+plot(1,1,pch=&quot;&quot;,ylim=c(0,max(allYears)),xlim=c(0,nYears+1),xlab=&quot;Years&quot;,ylab=&quot;Abundance&quot;,xaxt=&quot;n&quot;)  # set up blank plot
+cols &lt;- rainbow(5)    # set up colors to use
+for(s in 1:5){
+  points(allYears[s,],col=cols[s],type=&quot;l&quot;,lwd=2)     # plot out each life stage abundance, one at a time
+}
+axis(1,at=seq(1,nYears+1),labels = seq(0,nYears))   # label the axis
+legend(&quot;topright&quot;,col=cols,lwd=rep(2,3),legend=rownames(TMat),bty=&quot;n&quot;)  # put a legend on the plot</code></pre>
+<p><img src="PVA3_421_files/figure-html/unnamed-chunk-3-1.png" width="672" /></p>
+<p>NOTE: here we use the term “survival” to refer to surviving and staying in the same stage class, and “growth” to refer to surviving and moving on to the next life stage.</p>
+<p>Look over the model, and make sure that you understand the inner workings!</p>
+<div id="group-exercise-in-class-loggerhead-management" class="section level3">
+<h3>Group exercise (in class!): loggerhead management</h3>
+<p>Working in small groups if possible, investigate four management scenarios for the loggerhead turtle population:</p>
+<ol style="list-style-type: decimal">
+<li>Improve fecundity (labeled “Sub Fecundity” and “Adult Fecundity” in the IM model) via <em>nest-site protection</em>!
+<ul>
+<li>Improve fecundity to 1.5X the current value<br />
+</li>
+<li>Double fecundity (2X the current value)<br />
+</li>
+</ul></li>
+<li>Improve hatchling survival (labeled “hatchling growth” in the IM model) via <em>nest monitoring</em>
+<ul>
+<li>Improve <em>to</em> 90%<br />
+</li>
+<li>Improve <em>to</em> 100%<br />
+</li>
+</ul></li>
+<li>Improve large juvenile survival (labeled “Lg Juv Surv” in the IM model) using <em>Turtle Excluder Devices (TEDs)</em>
+<ul>
+<li>Increase by 15% (add 0.15 to the existing juvenile survival)<br />
+</li>
+<li>Increase by 25% (add 0.25 to the existing juvenile survival)<br />
+</li>
+</ul></li>
+<li>Improve adult/subadult survival (labeled “Sub Surv” and “Adult Surv” in IM) by <em>restricting longline fisheries</em>.
+<ul>
+<li>Increase by 5% (add 0.05 to the existing subadult and adult survival)<br />
+</li>
+<li>Increase by 10% (add 0.1 to the existing subadult and adult survival)</li>
+</ul></li>
+</ol>
+<div class="figure">
+<img src="TED1.jpg" alt="turtle excluder device" />
+<p class="caption">turtle excluder device</p>
+</div>
+<p>For each scenario, consider:</p>
+<ul>
+<li>The short-term outlook (4-6 years out)</li>
+<li>The long-term outlook (100 years out)</li>
+</ul>
+<p><strong>Please write down your responses to the following questions:</strong>:</p>
+<p><strong>Short Answer Question #1</strong>: What is your management recommendation for this population? Why? [please take your time with this one]</p>
+<p><strong>Short Answer Question #2</strong>: In the base model, why does the population always seem to grow during the first few years of the simulation, even if the population ultimately declines over time?</p>
+<div id="references" class="section level4">
+<h4>References</h4>
+<p>Mills, L. S., S. G. Hayes, C. Baldwin, M. J. Wisdom, J. Michael, J. Citta, D. J. Mattson, and K. Murphy. 1996. Factors Leading to Different Viability Predictions for a Grizzly Bear Data Set. Conservation Biology 10 (3), 863-873. doi: 10.1046/j.1523-1739.1996.10030863.x</p>
+<p>Morris, W. F. and D. F. Doak. 2002. Quantitative conservation biology: Theory and practice of population viability analysis. Sinauer, Sunderland, MA.</p>
+<p>Morris, W. F., D. F. Doak, M. Groom, P. Kareiva, J Fieberg, L. Gerber, P. Murphy, D. Thomson. 1999. A practical handbook for population viability analysis. The Nature Conservancy, Wash., DC.</p>
+</div>
+<div id="optional-forecast-the-population-into-the-future-in-excel" class="section level4">
+<h4>Optional: Forecast the population into the future in Excel</h4>
+<p>Since you probably are most familiar with Excel, let’s do it in Excel first! Or if you’d like to do it in R instead, I’ve provided some code to get you started! You can download the R code <a href="PVA3_421.R">here</a></p>
+</div>
+<div id="population-projection-in-excel" class="section level4">
+<h4>Population projection in Excel</h4>
+<p>You can load the base Excel model <a href="Loggerhead2019.xlsx">here</a></p>
+<ul>
+<li><p>Note that the transition rates are already provided for you in the spreadsheet – in the form of a transition matrix!</p></li>
+<li><p>NOTE: Wherever a transition is not possible, e.g., from hatchlings to large juveniles, you will see a zero in the transition matrix.</p></li>
+</ul>
 <p>The projection matrix can be used to project future loggerhead population size assuming the transition probabilities (the <span class="math inline">\(F_i\)</span>, <span class="math inline">\(S_i\)</span>, and <span class="math inline">\(G_i\)</span>) do not change over time.</p>
 <p>Let’s use the following initial densities in our model!</p>
 <ul>
@@ -638,7 +713,7 @@ Abundance_year0</code></pre>
 <p><img src="loggerhead7.png" /></p>
 <p>Using the ‘size-distribution vector’, we can project the population size of each size-class next year using the matrix formula: <span class="math inline">\(\mathbf{N}_{t+1} = \mathbf{A} \cdot \mathbf{N}_{t}\)</span>. (remember to see below for a refresher of matrix multiplication).</p>
 <p>This formula calculates the size distribution next year (i.e., in year <em>t + 1</em>) based on the projection matrix <span class="math inline">\(\mathbf{A}\)</span> and the size distribution this year <span class="math inline">\(\mathbf{N}_{t}\)</span>.</p>
-<p>For example, to calculate the first row of [n]t +1, the number of hatchlings:</p>
+<p>For example, to calculate the first row of [n]t+1, the number of hatchlings:</p>
 <p><em>hatchlings in year 1 = 2000x0 + 500x0 + 300x0 + 300x4.665 + 20x61.896 = 2637.42</em></p>
 <p>We systematically multiply each entry of the first row of the transition matrix [A] by the entries in column [n]0 and sum up these values. The first entry in row 1 is multiplied by the first entry of the column vector. The second entry of row 1 is multiplied by the second entry of the column vector, and so forth, until all 5 entries of row 1 have been accounted for. Let’s do this together!</p>
 <p><strong>Q</strong>: Using actual numbers as for hatchlings above, write out the equation for calculating the number of small juveniles (sm juv) in year 1 based on <span class="math inline">\(\mathbf{A}\)</span> and <span class="math inline">\(\mathbf{N}_{0}\)</span>:</p>
@@ -681,70 +756,12 @@ for(s in 1:5){
 }
 axis(1,at=seq(1,nYears+1),labels = seq(0,nYears))   # label the axis
 legend(&quot;topright&quot;,col=cols,lwd=rep(2,3),legend=rownames(TMat),bty=&quot;n&quot;)  # put a legend on the plot</code></pre>
-<p><img src="PVA3_421_files/figure-html/unnamed-chunk-4-1.png" width="672" /></p>
+<p><img src="PVA3_421_files/figure-html/unnamed-chunk-5-1.png" width="672" /></p>
 <p><strong>Q</strong>: Is this model <em>deterministic</em> or <em>stochastic</em>?</p>
 </div>
 </div>
-<div id="projecting-the-loggerhead-population-in-insightmaker" class="section level2">
-<h2>Projecting the loggerhead population in InsightMaker</h2>
-<p>First, clone the baseline loggerhead PVA model <a href="https://insightmaker.com/insight/77078/Loggerhead-PVA-base-model">here</a>.</p>
-<p>Hit “Simulate”. Make sure that the model results look the same as the above figure! If not, make sure the parameters are correct!</p>
-<p>NOTE: here we use the term “survival” to refer to surviving and staying in the same stage class, and “growth” to refer to surviving and moving on to the next life stage.</p>
-<p>Look over the model, and make sure that you understand the inner workings!</p>
-<div id="group-exercise-in-class-loggerhead-management" class="section level3">
-<h3>Group exercise (in class!): loggerhead management</h3>
-<p>Working in groups of 2-3, investigate four management scenarios for the loggerhead turtle population:</p>
-<ol style="list-style-type: decimal">
-<li>Improve fecundity (labeled “Sub Fecundity” and “Adult Fecundity” in the IM model) via <em>nest-site protection</em>!
-<ul>
-<li>Improve fecundity to 1.5X the current value<br />
-</li>
-<li>Double fecundity (2X the current value)<br />
-</li>
-</ul></li>
-<li>Improve hatchling survival (labeled “hatchling growth” in the IM model) via <em>nest monitoring</em>
-<ul>
-<li>Improve <em>to</em> 90%<br />
-</li>
-<li>Improve <em>to</em> 100%<br />
-</li>
-</ul></li>
-<li>Improve large juvenile survival (labeled “Lg Juv Surv” in the IM model) using <em>Turtle Excluder Devices (TEDs)</em>
-<ul>
-<li>Increase by 15% (add 0.15 to the existing juvenile survival)<br />
-</li>
-<li>Increase by 25% (add 0.25 to the existing juvenile survival)<br />
-</li>
-</ul></li>
-<li>Improve adult/subadult survival (labeled “Sub Surv” and “Adult Surv” in IM) by <em>restricting longline fisheries</em>.
-<ul>
-<li>Increase by 5% (add 0.05 to the existing subadult and adult survival)<br />
-</li>
-<li>Increase by 10% (add 0.1 to the existing subadult and adult survival)</li>
-</ul></li>
-</ol>
-<div class="figure">
-<img src="TED1.jpg" alt="turtle excluder device" />
-<p class="caption">turtle excluder device</p>
-</div>
-<p>For each scenario, consider:</p>
-<ul>
-<li>The short-term outlook (4-6 years out)</li>
-<li>The long-term outlook (100 years out)</li>
-</ul>
-<p><strong>Please write down your responses to the following questions:</strong>:</p>
-<p><strong>Question 3.1</strong>: What is your management recommendation for this population? Why?</p>
-<p><strong>Question 3.2</strong>: In the base model, why does the population always seem to grow during the first few years of the simulation, even if it ultimately declines?</p>
-<div id="references" class="section level4">
-<h4>References</h4>
-<p>Mills, L. S., S. G. Hayes, C. Baldwin, M. J. Wisdom, J. Michael, J. Citta, D. J. Mattson, and K. Murphy. 1996. Factors Leading to Different Viability Predictions for a Grizzly Bear Data Set. Conservation Biology 10 (3), 863-873. doi: 10.1046/j.1523-1739.1996.10030863.x</p>
-<p>Morris, W. F. and D. F. Doak. 2002. Quantitative conservation biology: Theory and practice of population viability analysis. Sinauer, Sunderland, MA.</p>
-<p>Morris, W. F., D. F. Doak, M. Groom, P. Kareiva, J Fieberg, L. Gerber, P. Murphy, D. Thomson. 1999. A practical handbook for population viability analysis. The Nature Conservancy, Wash., DC.</p>
-</div>
-</div>
-</div>
-<div id="review-matrix-population-models" class="section level2">
-<h2>REVIEW: matrix population models:</h2>
+<div id="review-matrix-population-models" class="section level3">
+<h3>REVIEW: matrix population models:</h3>
 <p>We can present yearly fecundity and survival probabilities compactly in a <strong>projection matrix</strong> [A] which we use to project the population size year to year.</p>
 <p>We all remember the finite-population-growth equation:</p>
 <p><span class="math inline">\(N_{t+1}=\lambda \cdot N_t \qquad \text{(Eq. 1)}\)</span>,</p>
@@ -767,6 +784,7 @@ legend(&quot;topright&quot;,col=cols,lwd=rep(2,3),legend=rownames(TMat),bty=&quo
 <p>Fecundity also takes into account the survival rate from <span class="math inline">\(t\)</span> to <span class="math inline">\(t+1\)</span>!! For an adult of stage <span class="math inline">\(t\)</span> to contribute to the next generation, <em>it must both survive and reproduce</em>!.</p>
 <p><span class="math inline">\(F_t = P_{1 \rightarrow 2} \cdot b_{t+1} \qquad \text{(Eq. 4)}\)</span></p>
 <p>There is a lot we can do with matrix population models. The most obvious one is <em>projection</em>:</p>
+</div>
 <div id="projection" class="section level3">
 <h3>Projection:</h3>
 <p>We have already seen the projection equation (<em>Eq. 2</em>, above). Here is how we can implement this in R:</p>
@@ -824,7 +842,7 @@ for(s in 1:3){
 }
 axis(1,at=seq(1,nYears+1),labels = seq(0,nYears))   # label the axis
 legend(&quot;topleft&quot;,col=cols,lwd=rep(2,3),legend=paste(&quot;Stage &quot;,seq(1:nrow(TMat))))  # put a legend on the plot</code></pre>
-<p><img src="PVA3_421_files/figure-html/unnamed-chunk-10-1.png" width="672" /></p>
+<p><img src="PVA3_421_files/figure-html/unnamed-chunk-11-1.png" width="672" /></p>
 </div>
 </div>
 </div>
