--- a/LECTURE13.html
+++ b/LECTURE13.html
@@ -615,7 +615,7 @@ div.tocify {
 <div id="sources-and-sinks" class="section level2">
 <h2>Sources and sinks!</h2>
 <p>One important and practically useful concept related to metapopulations is that of <strong>source-sink dynamics</strong></p>
-<p><img src="sourcesink1.gif" /></p>
+<p><img src="sourcesink1.jpg" /></p>
 <p>In the real world, patches vary in size and quality. That is, the assumption of homogeneity of patches (inherent to the classical metapopulation framework) is unlikely to be met in most real metapopulations!</p>
 <p>Just like with an age-structured population, where vital rates and equilibrium abundance can vary by age or size-class, <em>vital rates and abundances can vary over space</em>. Some areas might have better habitat, with higher overall population growth rates! On the other hand, some areas might have poor habitat- and these areas may be associated with lower vital rates…</p>
 <p>In fact, some patches may be so resource-poor or afford such bad protection from predators that population growth is negative (i.e., <span class="math inline">\(r\)</span> below zero, or <span class="math inline">\(\lambda\)</span> less than 1). Other patches may represent perfect conditions for population growth (at least if the habitat isn’t too crowded)!</p>
@@ -650,9 +650,9 @@ Lambda for source population [lambda good]: 2.1</p>
 <p><strong>Q</strong>: in this scenario, a constant fraction of each population disperses to each neighboring patch each year. Is this realistic? Can you think of real-world scenarios that would lead to different dispersal patterns?</p>
 <p><strong>Q</strong>: what data sources might be helpful in understanding dispersal rates in a metapopulation?</p>
 <ol start="4" style="list-style-type: decimal">
-<li><p>Change the dispersal rate to zero and run the model. What happens? Is this realistic?</p></li>
+<li><p>Change the dispersal rate to zero and run the model. What happens? Does this make sense?</p></li>
 <li><p>Change the dispersal rate to 0.01 (1%). What happens now? Does the distant sink still function as a sink population? That is, is it occupied continuously? If not, what is the minimum dispersal rate that generally ensures that the distant sink is consistently (continuously) occupied (make sure the lower bound of the 95% region for abundance in this patch is above 2 for all years)? [tophat]</p></li>
-<li><p>Change the dispersal rate back to 10%. Now reduce the population growth rate in the source population to 1.1. What happens now? Does the source population still operate as an effective source (that is, does it support consistent occupation of all the sinks)? What happens if you set the maximum growth rate in the source patch to 1? Could such a population ever serve as an effective source population?</p></li>
+<li><p>Change the dispersal rate back to 10%. Now reduce the population growth rate in the source population (“lambda good”) to 1.1. What happens now? Does the source population still operate as an effective source (that is, does it support consistent occupation of all the sinks)? What happens if you set the maximum growth rate in the source patch to 1? Could such a population ever serve as an effective source population?</p></li>
 </ol>
 <div id="a-pseudo-sink" class="section level4">
 <h4>A pseudo-sink!</h4>
@@ -678,7 +678,7 @@ code here
 and
 some more
 random code
-/*</code></pre>
+*/</code></pre>
 <p>This will force 50% of the source population to try to move to the sink habitat each year! Nearly all individuals that are in the sink habitat will attempt to stay there.</p>
 <p>Also, change the lambda for the nearby sink to 0.25, (meaning 75% of the sink population dies each year due to predation). To do this, replace the [lambda bad] term in the births/deaths flow for the nearby sink with the number “0.25”. Open the equation editor for this flow- after you change, it should look something like this:</p>
 <pre><code>growth &lt;- [nearby sink]*Ln(0.25)
@@ -693,10 +693,8 @@ newexp-[nearby sink]
 <ol start="9" style="list-style-type: decimal">
 <li>Run the model with the nearby sink as an ecological trap, and try to address the following questions:</li>
 </ol>
-<p><strong>Q</strong>: in what way is the nearby sink now an <em>ecological trap</em>?</p>
-<p><strong>Q</strong>: are all sink populations really <em>ecological traps</em>?</p>
-<p><strong>Q</strong>: are metapopulations better off without sink populations?</p>
-<p><strong>Q</strong> could it ever be <em>desirable</em> to remove a sink population to improve the conservation status of a metapopulation? Under what circumstances? How does this relate to the concept of *density-dependence?</p>
+<p><strong>Q</strong>: in what way is the nearby sink now an <em>ecological trap</em>? Are all sink populations really <em>ecological traps</em>?</p>
+<p><strong>Q</strong>: are metapopulations better off without sink populations? Could it ever be <em>desirable</em> to remove a sink population to improve the conservation status of a metapopulation? Under what circumstances? How does this relate to the concept of *density-dependence?</p>
 </div>
 <div id="benefits-of-sink-populations" class="section level4">
 <h4>Benefits of sink populations!</h4>
